[gd_scene load_steps=2 format=3 uid="uid://c00xhenjpbna7"]

[ext_resource type="Script" path="res://UIs/purchasing_ui.gd" id="1_12xdw"]

[node name="PurchasingUI" type="CanvasLayer"]
script = ExtResource("1_12xdw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 647.0

[node name="GeneralPurchase" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 349.0

[node name="Label" type="Label" parent="Control/GeneralPurchase"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.5
offset_right = 178.5
offset_bottom = 58.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "General Purchases"

[node name="GeneralStats" type="Control" parent="Control/GeneralPurchase"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.0
offset_top = -64.5
offset_right = 299.0
offset_bottom = 169.5
grow_horizontal = 2
grow_vertical = 2

[node name="Strength" type="Button" parent="Control/GeneralPurchase/GeneralStats"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_right = 4.0
offset_bottom = 8.0
grow_horizontal = 2
text = "Bullet Strength"

[node name="Speed" type="Button" parent="Control/GeneralPurchase/GeneralStats"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Character Speed "

[node name="BulletSpeed" type="Button" parent="Control/GeneralPurchase/GeneralStats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "Bullet Speed "

[node name="ReloadTime" type="Button" parent="Control/GeneralPurchase/GeneralStats"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Reload Time"

[node name="ClassPurchase" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -2.0
offset_top = 32.5
offset_right = -2.0
offset_bottom = 322.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/ClassPurchase"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_right = 87.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Class Based Purchases
"

[node name="Control" type="Control" parent="Control/ClassPurchase"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -334.0
offset_top = -60.0
offset_right = 337.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="TurretBtn" type="Button" parent="Control/ClassPurchase/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -27.0
offset_right = 28.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
text = "Turret
$15"

[node name="bomberBtn" type="Button" parent="Control/ClassPurchase/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.0
offset_right = 70.0
offset_bottom = 27.0
grow_vertical = 2
text = "Bomber
$30"

[node name="HealerBtn" type="Button" parent="Control/ClassPurchase/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -27.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
text = "Healing Tower
$150"

[connection signal="button_down" from="Control/GeneralPurchase/GeneralStats/Strength" to="." method="_on_strength_button_down"]
[connection signal="button_down" from="Control/GeneralPurchase/GeneralStats/Speed" to="." method="_on_speed_button_down"]
[connection signal="button_down" from="Control/GeneralPurchase/GeneralStats/BulletSpeed" to="." method="_on_bullet_speed_button_down"]
[connection signal="button_down" from="Control/GeneralPurchase/GeneralStats/ReloadTime" to="." method="_on_reload_time_button_down"]
[connection signal="button_up" from="Control/ClassPurchase/Control/TurretBtn" to="." method="_on_turret_btn_button_up"]
[connection signal="button_up" from="Control/ClassPurchase/Control/bomberBtn" to="." method="_on_bomber_btn_button_up"]
[connection signal="button_up" from="Control/ClassPurchase/Control/HealerBtn" to="." method="_on_healer_btn_button_up"]
